# foundationpose_cpp

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  README_cn.md
.github/workflows/: Compilation.yml  Lint.yml
deploy_core/: CMakeLists.txt  README.md
deploy_core/include/deploy_core/: async_pipeline.h  async_pipeline_impl.h  base_detection.h  base_infer_core.h  base_sam.h  blob_buffer.h  block_queue.h  common_defination.h  wrapper.h
deploy_core/src/: base_detection.cpp  base_infer_core.cpp  base_sam.cpp
detection_6d_foundationpose/: CMakeLists.txt
detection_6d_foundationpose/include/detection_6d_foundationpose/: foundationpose.hpp  mesh_loader.hpp
detection_6d_foundationpose/src/: foundationpose.cpp  foundationpose_decoder.cpp  foundationpose_decoder.cu  foundationpose_decoder.cu.hpp  foundationpose_decoder.hpp  foundationpose_render.cpp  foundationpose_render.cu  foundationpose_render.cu.hpp  foundationpose_render.hpp  foundationpose_sampling.cpp  foundationpose_sampling.cu  foundationpose_sampling.cu.hpp  foundationpose_sampling.hpp  foundationpose_utils.cpp  foundationpose_utils.cu  foundationpose_utils.cu.hpp  foundationpose_utils.hpp
detection_6d_foundationpose/src/mesh_loader/: assimp_mesh_loader.cpp
detection_6d_foundationpose/src/nvdiffrast/common/: framework.h
detection_6d_foundationpose/src/nvdiffrast/common/cudaraster/: CudaRaster.hpp
detection_6d_foundationpose/src/nvdiffrast/common/cudaraster/impl/: RasterImpl.hpp
docker/: build_docker.sh  foundationpose.dockerfile  foundationpose_jetson_orin_trt10.dockerfile  foundationpose_jetson_orin_trt8.dockerfile  foundationpose_nvidia_gpu_trt10.dockerfile  foundationpose_nvidia_gpu_trt8.dockerfile  into_docker.sh
docs/: build_enviroment_on_jetson.md  gen_3d_obj_with_bundlesdf.md
inference_core/: CMakeLists.txt
inference_core/trt_core/: CMakeLists.txt
inference_core/trt_core/include/trt_core/: trt_core.h
inference_core/trt_core/src/: trt_blob_buffer.hpp  trt_core.cpp  trt_core_factory.cpp
simple_tests/: CMakeLists.txt
simple_tests/include/tests/: fps_counter.h  fs_util.hpp  help_func.hpp
simple_tests/src/: test_foundationpose.cpp
test_data/: download.md
tools/: cvt_onnx2trt.bash
